<resources>
    <string name="app_name">Wild Gifts List</string>
    <string name="add_wish">Ajouter un souhait</string>
    <string name="name">Nom</string>
    <string name="description">Description</string>
    <string name="link">Lien</string>
    <string name="abort">Annuler</string>
    <string name="create">Créer</string>
    <string name="connexion">Connexion</string>
    <string name="error_password">Pseudo déjà utilisé ou mot de passe erroné</string>
    <string name="error_fill">Tu dois remplir tous les champs demandés</string>
    <string name="created_user">Bienvenue</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="Offert">Offerts</string>
    <string name="souhait">Souhaits</string>
    <string name="offrir">Offrir</string>
    <string name="empty_fields">Veuillez remplir les champs \'Nom\' et \'Description\'</string>
    <string name="download">Téléchargement</string>
    <string name="createdWish">Souhait créé</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_souhait">Souhait</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
